[Update] add form step 2 apply form

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Oswald:200,400%7CLato:300,400,300italic,700%7CMontserrat:900">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/fonts.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
